Assignment4/y.output
Terminals unused in grammar

   PUNCTUATORS


State 289 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | '(' expression ')'
    3                   | STRING_LITERAL
    4                   | constant

    5 equality_expression: equality_expression NE_OP relational_expression
    6                    | relational_expression
    7                    | equality_expression EQ_OP relational_expression

    8 constant: INT_CONSTANT
    9         | CHAR_CONSTANT
   10         | FLOAT_CONSTANT
   11         | ZERO_CONSTANT

   12 argument_expression_list: assignment_expression
   13                         | argument_expression_list ',' assignment_expression

   14 unary_operator: '&'
   15               | '+'
   16               | '-'
   17               | '*'

   18 postfix_expression: primary_expression
   19                   | postfix_expression '(' ')'
   20                   | postfix_expression '.' IDENTIFIER
   21                   | postfix_expression '(' argument_expression_list ')'
   22                   | postfix_expression POINTER_OP IDENTIFIER
   23                   | postfix_expression INCREMENT_OP
   24                   | postfix_expression DECREMENT_OP
   25                   | primary_expression '[' expression ']' '[' expression ']'
   26                   | postfix_expression POINTCOL

   27 cast_expression: unary_expression

   28 unary_expression: postfix_expression
   29                 | INCREMENT_OP unary_expression
   30                 | unary_operator cast_expression
   31                 | DECREMENT_OP unary_expression

   32 additive_expression: multiplicative_expression
   33                    | additive_expression '+' multiplicative_expression
   34                    | additive_expression '-' multiplicative_expression

   35 relational_expression: shift_expression
   36                      | relational_expression '<' shift_expression
   37                      | relational_expression GE_OP shift_expression
   38                      | relational_expression '>' shift_expression
   39                      | relational_expression LE_OP shift_expression

   40 and_expression: and_expression '&' equality_expression
   41               | equality_expression

   42 exclusive_or_expression: and_expression
   43                        | exclusive_or_expression '^' and_expression

   44 init_declarator: declarator
   45                | declarator '=' initializer

   46 inclusive_or_expression: inclusive_or_expression '|' exclusive_or_expression
   47                        | exclusive_or_expression

   48 declaration_specifiers: type_specifier
   49                       | type_specifier declaration_specifiers

   50 logical_and_expression: logical_and_expression N AND_OP M inclusive_or_expression
   51                       | inclusive_or_expression

   52 logical_or_expression: logical_or_expression N OR_OP M logical_and_expression
   53                      | logical_and_expression

   54 N: %empty

   55 M: %empty

   56 conditional_expression: logical_or_expression N '?' M expression N ':' M conditional_expression
   57                       | logical_or_expression

   58 assignment_expression: unary_expression assignment_operator assignment_expression
   59                      | conditional_expression

   60 initializer: assignment_expression
   61            | '{' initializer_list '}'
   62            | '{' initializer_list ',' '}'

   63 shift_expression: additive_expression
   64                 | shift_expression LEFT_OP additive_expression
   65                 | shift_expression RIGHT_OP additive_expression

   66 expression: assignment_expression
   67           | expression ',' assignment_expression

   68 constant_expression: conditional_expression

   69 declaration: declaration_specifiers ';'
   70            | declaration_specifiers init_declarator_list ';'

   71 init_declarator_list: init_declarator
   72                     | init_declarator_list ',' init_declarator

   73 declarator: pointer direct_declarator
   74           | direct_declarator

   75 assignment_operator: MODULUS_ASSIGN
   76                    | '='
   77                    | DIVIDE_ASSIGN
   78                    | MULTIPLY_ASSIGN
   79                    | PLUS_ASSIGN
   80                    | XOR_ASSIGN
   81                    | MINUS_ASSIGN
   82                    | RIGHT_ASSIGN
   83                    | OR_ASSIGN
   84                    | LEFT_ASSIGN
   85                    | AND_ASSIGN

   86 parameter_list: parameter_declaration
   87               | parameter_list ',' parameter_declaration

   88 direct_declarator: IDENTIFIER
   89                  | '(' declarator ')'
   90                  | direct_declarator '(' identifier_list ')'
   91                  | direct_declarator '[' assignment_expression ']' '[' assignment_expression ']'
   92                  | direct_declarator '[' ']' '[' ']'
   93                  | direct_declarator '(' CST ')'
   94                  | direct_declarator '(' CST parameter_type_list ')'

   95 CST: %empty

   96 pointer: '*'
   97        | '*' pointer

   98 parameter_type_list: parameter_list

   99 parameter_declaration: declaration_specifiers declarator
  100                      | declaration_specifiers

  101 identifier_list: IDENTIFIER
  102                | identifier_list ',' IDENTIFIER

  103 initializer_list: initializer
  104                 | designation initializer
  105                 | initializer_list ',' initializer
  106                 | initializer_list ',' designation initializer

  107 designator_list: designator
  108                | designator_list designator

  109 function_definition: declaration_specifiers declarator declaration_list CST compound_statement
  110                    | declaration_specifiers declarator CST compound_statement

  111 designator: '[' constant_expression ']'
  112           | '.' IDENTIFIER

  113 statement: labeled_statement
  114          | compound_statement
  115          | expression_statement
  116          | selection_statement
  117          | iteration_statement
  118          | jump_statement

  119 labeled_statement: IDENTIFIER ':' statement
  120                  | CASE constant_expression ':' statement
  121                  | DEFAULT ':' statement

  122 multiplicative_expression: cast_expression
  123                          | multiplicative_expression '*' cast_expression
  124                          | multiplicative_expression '%' cast_expression
  125                          | multiplicative_expression '/' cast_expression

  126 block_item_list: block_item
  127                | block_item_list M block_item

  128 expression_statement: ';'
  129                     | expression ';'

  130 selection_statement: SWITCH '(' expression ')' statement
  131                    | IF '(' expression N ')' M statement N
  132                    | IF '(' expression N ')' M statement N ELSE M statement

  133 block_item: statement
  134           | declaration

  135 compound_statement: '{' '}'
  136                   | '{' block_item_list '}'

  137 iteration_statement: WHILE M '(' expression ')' M statement
  138                    | FOR '(' expression_statement M expression_statement ')' M statement
  139                    | DO M statement M WHILE '(' expression ')' ';'
  140                    | FOR '(' expression_statement M expression_statement M expression N ')' M statement

  141 designation: designator_list '='

  142 jump_statement: CONTINUE ';'
  143               | RETURN expression ';'
  144               | BREAK ';'
  145               | GOTO IDENTIFIER ';'
  146               | RETURN ';'

  147 external_declaration: function_definition
  148                     | declaration

  149 type_specifier: SHORT
  150               | LONG
  151               | CHAR
  152               | VOID
  153               | SIGNED
  154               | INT
  155               | DOUBLE
  156               | UNSIGNED
  157               | FLOAT
  158               | MATRIX
  159               | BOOL

  160 translation_unit: external_declaration
  161                 | translation_unit external_declaration

  162 declaration_list: declaration
  163                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'%' (37) 124
'&' (38) 14 40
'(' (40) 2 19 21 89 90 93 94 130 131 132 137 138 139 140
')' (41) 2 19 21 89 90 93 94 130 131 132 137 138 139 140
'*' (42) 17 96 97 123
'+' (43) 15 33
',' (44) 13 62 67 72 87 102 105 106
'-' (45) 16 34
'.' (46) 20 112
'/' (47) 125
':' (58) 56 119 120 121
';' (59) 69 70 128 129 139 142 143 144 145 146
'<' (60) 36
'=' (61) 45 76 141
'>' (62) 38
'?' (63) 56
'[' (91) 25 91 92 111
']' (93) 25 91 92 111
'^' (94) 43
'{' (123) 61 62 135 136
'|' (124) 46
'}' (125) 61 62 135 136
error (256)
CHAR (258) 151
SHORT (259) 149
INT (260) 154
LONG (261) 150
SIGNED (262) 153
UNSIGNED (263) 156
FLOAT (264) 157
DOUBLE (265) 155
VOID (266) 152
BOOL (267) 159
BREAK (268) 144
CASE (269) 120
CONTINUE (270) 142
DEFAULT (271) 121
DO (272) 139
IF (273) 131 132
ELSE (274) 132
FOR (275) 138 140
GOTO (276) 145
WHILE (277) 137 139
SWITCH (278) 130
RETURN (279) 143 146
MATRIX (280) 158
PLUS_ASSIGN (281) 79
MINUS_ASSIGN (282) 81
RIGHT_ASSIGN (283) 82
LEFT_ASSIGN (284) 84
MULTIPLY_ASSIGN (285) 78
PUNCTUATORS (286)
STRING_LITERAL (287) 3
IDENTIFIER (288) 1 20 22 88 101 102 112 119 145
INT_CONSTANT (289) 8
FLOAT_CONSTANT (290) 10
CHAR_CONSTANT (291) 9
MODULUS_ASSIGN (292) 75
AND_ASSIGN (293) 85
DIVIDE_ASSIGN (294) 77
XOR_ASSIGN (295) 80
POINTER_OP (296) 22
AND_OP (297) 50
OR_ASSIGN (298) 83
RIGHT_OP (299) 65
LEFT_OP (300) 64
INCREMENT_OP (301) 23 29
DECREMENT_OP (302) 24 31
EQ_OP (303) 7
NE_OP (304) 5
ZERO_CONSTANT (305) 11
POINTCOL (306) 26
OR_OP (307) 52
LE_OP (308) 39
GE_OP (309) 37


Nonterminals, with rules where they appear

$accept (77)
    on left: 0
primary_expression (78)
    on left: 1 2 3 4, on right: 18 25
equality_expression (79)
    on left: 5 6 7, on right: 5 7 40 41
constant (80)
    on left: 8 9 10 11, on right: 4
argument_expression_list (81)
    on left: 12 13, on right: 13 21
unary_operator (82)
    on left: 14 15 16 17, on right: 30
postfix_expression (83)
    on left: 18 19 20 21 22 23 24 25 26, on right: 19 20 21 22 23 24
    26 28
cast_expression (84)
    on left: 27, on right: 30 122 123 124 125
unary_expression (85)
    on left: 28 29 30 31, on right: 27 29 31 58
additive_expression (86)
    on left: 32 33 34, on right: 33 34 63 64 65
relational_expression (87)
    on left: 35 36 37 38 39, on right: 5 6 7 36 37 38 39
and_expression (88)
    on left: 40 41, on right: 40 42 43
exclusive_or_expression (89)
    on left: 42 43, on right: 43 46 47
init_declarator (90)
    on left: 44 45, on right: 71 72
inclusive_or_expression (91)
    on left: 46 47, on right: 46 50 51
declaration_specifiers (92)
    on left: 48 49, on right: 49 69 70 99 100 109 110
logical_and_expression (93)
    on left: 50 51, on right: 50 52 53
logical_or_expression (94)
    on left: 52 53, on right: 52 56 57
N (95)
    on left: 54, on right: 50 52 56 131 132 140
M (96)
    on left: 55, on right: 50 52 56 127 131 132 137 138 139 140
conditional_expression (97)
    on left: 56 57, on right: 56 59 68
assignment_expression (98)
    on left: 58 59, on right: 12 13 58 60 66 67 91
initializer (99)
    on left: 60 61 62, on right: 45 103 104 105 106
shift_expression (100)
    on left: 63 64 65, on right: 35 36 37 38 39 64 65
expression (101)
    on left: 66 67, on right: 2 25 56 67 129 130 131 132 137 139 140
    143
constant_expression (102)
    on left: 68, on right: 111 120
declaration (103)
    on left: 69 70, on right: 134 148 162 163
init_declarator_list (104)
    on left: 71 72, on right: 70 72
declarator (105)
    on left: 73 74, on right: 44 45 89 99 109 110
assignment_operator (106)
    on left: 75 76 77 78 79 80 81 82 83 84 85, on right: 58
parameter_list (107)
    on left: 86 87, on right: 87 98
direct_declarator (108)
    on left: 88 89 90 91 92 93 94, on right: 73 74 90 91 92 93 94
CST (109)
    on left: 95, on right: 93 94 109 110
pointer (110)
    on left: 96 97, on right: 73 97
parameter_type_list (111)
    on left: 98, on right: 94
parameter_declaration (112)
    on left: 99 100, on right: 86 87
identifier_list (113)
    on left: 101 102, on right: 90 102
initializer_list (114)
    on left: 103 104 105 106, on right: 61 62 105 106
designator_list (115)
    on left: 107 108, on right: 108 141
function_definition (116)
    on left: 109 110, on right: 147
designator (117)
    on left: 111 112, on right: 107 108
statement (118)
    on left: 113 114 115 116 117 118, on right: 119 120 121 130 131
    132 133 137 138 139 140
labeled_statement (119)
    on left: 119 120 121, on right: 113
multiplicative_expression (120)
    on left: 122 123 124 125, on right: 32 33 34 123 124 125
block_item_list (121)
    on left: 126 127, on right: 127 136
expression_statement (122)
    on left: 128 129, on right: 115 138 140
selection_statement (123)
    on left: 130 131 132, on right: 116
block_item (124)
    on left: 133 134, on right: 126 127
compound_statement (125)
    on left: 135 136, on right: 109 110 114
iteration_statement (126)
    on left: 137 138 139 140, on right: 117
designation (127)
    on left: 141, on right: 104 106
jump_statement (128)
    on left: 142 143 144 145 146, on right: 118
external_declaration (129)
    on left: 147 148, on right: 160 161
type_specifier (130)
    on left: 149 150 151 152 153 154 155 156 157 158 159, on right:
    48 49
translation_unit (131)
    on left: 160 161, on right: 0 161
declaration_list (132)
    on left: 162 163, on right: 109 163


State 0

    0 $accept: . translation_unit $end

    CHAR      shift, and go to state 1
    SHORT     shift, and go to state 2
    INT       shift, and go to state 3
    LONG      shift, and go to state 4
    SIGNED    shift, and go to state 5
    UNSIGNED  shift, and go to state 6
    FLOAT     shift, and go to state 7
    DOUBLE    shift, and go to state 8
    VOID      shift, and go to state 9
    BOOL      shift, and go to state 10
    MATRIX    shift, and go to state 11

    declaration_specifiers  go to state 12
    declaration             go to state 13
    function_definition     go to state 14
    external_declaration    go to state 15
    type_specifier          go to state 16
    translation_unit        go to state 17


State 1

  151 type_specifier: CHAR .

    $default  reduce using rule 151 (type_specifier)


State 2

  149 type_specifier: SHORT .

    $default  reduce using rule 149 (type_specifier)


State 3

  154 type_specifier: INT .

    $default  reduce using rule 154 (type_specifier)


State 4

  150 type_specifier: LONG .

    $default  reduce using rule 150 (type_specifier)


State 5

  153 type_specifier: SIGNED .

    $default  reduce using rule 153 (type_specifier)


State 6

  156 type_specifier: UNSIGNED .

    $default  reduce using rule 156 (type_specifier)


State 7

  157 type_specifier: FLOAT .

    $default  reduce using rule 157 (type_specifier)


State 8

  155 type_specifier: DOUBLE .

    $default  reduce using rule 155 (type_specifier)


State 9

  152 type_specifier: VOID .

    $default  reduce using rule 152 (type_specifier)


State 10

  159 type_specifier: BOOL .

    $default  reduce using rule 159 (type_specifier)


State 11

  158 type_specifier: MATRIX .

    $default  reduce using rule 158 (type_specifier)


State 12

   69 declaration: declaration_specifiers . ';'
   70            | declaration_specifiers . init_declarator_list ';'
  109 function_definition: declaration_specifiers . declarator declaration_list CST compound_statement
  110                    | declaration_specifiers . declarator CST compound_statement

    IDENTIFIER  shift, and go to state 18
    '('         shift, and go to state 19
    '*'         shift, and go to state 20
    ';'         shift, and go to state 21

    init_declarator       go to state 22
    init_declarator_list  go to state 23
    declarator            go to state 24
    direct_declarator     go to state 25
    pointer               go to state 26


State 13

  148 external_declaration: declaration .

    $default  reduce using rule 148 (external_declaration)


State 14

  147 external_declaration: function_definition .

    $default  reduce using rule 147 (external_declaration)


State 15

  160 translation_unit: external_declaration .

    $default  reduce using rule 160 (translation_unit)


State 16

   48 declaration_specifiers: type_specifier .
   49                       | type_specifier . declaration_specifiers

    CHAR      shift, and go to state 1
    SHORT     shift, and go to state 2
    INT       shift, and go to state 3
    LONG      shift, and go to state 4
    SIGNED    shift, and go to state 5
    UNSIGNED  shift, and go to state 6
    FLOAT     shift, and go to state 7
    DOUBLE    shift, and go to state 8
    VOID      shift, and go to state 9
    BOOL      shift, and go to state 10
    MATRIX    shift, and go to state 11

    $default  reduce using rule 48 (declaration_specifiers)

    declaration_specifiers  go to state 27
    type_specifier          go to state 16


State 17

    0 $accept: translation_unit . $end
  161 translation_unit: translation_unit . external_declaration

    $end      shift, and go to state 28
    CHAR      shift, and go to state 1
    SHORT     shift, and go to state 2
    INT       shift, and go to state 3
    LONG      shift, and go to state 4
    SIGNED    shift, and go to state 5
    UNSIGNED  shift, and go to state 6
    FLOAT     shift, and go to state 7
    DOUBLE    shift, and go to state 8
    VOID      shift, and go to state 9
    BOOL      shift, and go to state 10
    MATRIX    shift, and go to state 11

    declaration_specifiers  go to state 12
    declaration             go to state 13
    function_definition     go to state 14
    external_declaration    go to state 29
    type_specifier          go to state 16


State 18

   88 direct_declarator: IDENTIFIER .

    $default  reduce using rule 88 (direct_declarator)


State 19

   89 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 18
    '('         shift, and go to state 19
    '*'         shift, and go to state 20

    declarator         go to state 30
    direct_declarator  go to state 25
    pointer            go to state 26


State 20

   96 pointer: '*' .
   97        | '*' . pointer

    '*'  shift, and go to state 20

    $default  reduce using rule 96 (pointer)

    pointer  go to state 31


State 21

   69 declaration: declaration_specifiers ';' .

    $default  reduce using rule 69 (declaration)


State 22

   71 init_declarator_list: init_declarator .

    $default  reduce using rule 71 (init_declarator_list)


State 23

   70 declaration: declaration_specifiers init_declarator_list . ';'
   72 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 32
    ';'  shift, and go to state 33


State 24

   44 init_declarator: declarator .
   45                | declarator . '=' initializer
  109 function_definition: declaration_specifiers declarator . declaration_list CST compound_statement
  110                    | declaration_specifiers declarator . CST compound_statement

    CHAR      shift, and go to state 1
    SHORT     shift, and go to state 2
    INT       shift, and go to state 3
    LONG      shift, and go to state 4
    SIGNED    shift, and go to state 5
    UNSIGNED  shift, and go to state 6
    FLOAT     shift, and go to state 7
    DOUBLE    shift, and go to state 8
    VOID      shift, and go to state 9
    BOOL      shift, and go to state 10
    MATRIX    shift, and go to state 11
    '='       shift, and go to state 34

    '{'       reduce using rule 95 (CST)
    $default  reduce using rule 44 (init_declarator)

    declaration_specifiers  go to state 35
    declaration             go to state 36
    CST                     go to state 37
    type_specifier          go to state 16
    declaration_list        go to state 38


State 25

   74 declarator: direct_declarator .
   90 direct_declarator: direct_declarator . '(' identifier_list ')'
   91                  | direct_declarator . '[' assignment_expression ']' '[' assignment_expression ']'
   92                  | direct_declarator . '[' ']' '[' ']'
   93                  | direct_declarator . '(' CST ')'
   94                  | direct_declarator . '(' CST parameter_type_list ')'

    '('  shift, and go to state 39
    '['  shift, and go to state 40

    $default  reduce using rule 74 (declarator)


State 26

   73 declarator: pointer . direct_declarator

    IDENTIFIER  shift, and go to state 18
    '('         shift, and go to state 19

    direct_declarator  go to state 41


State 27

   49 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 49 (declaration_specifiers)


State 28

    0 $accept: translation_unit $end .

    $default  accept


State 29

  161 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 161 (translation_unit)


State 30

   89 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 42


State 31

   97 pointer: '*' pointer .

    $default  reduce using rule 97 (pointer)


State 32

   72 init_declarator_list: init_declarator_list ',' . init_declarator

    IDENTIFIER  shift, and go to state 18
    '('         shift, and go to state 19
    '*'         shift, and go to state 20

    init_declarator    go to state 43
    declarator         go to state 44
    direct_declarator  go to state 25
    pointer            go to state 26


State 33

   70 declaration: declaration_specifiers init_declarator_list ';' .

    $default  reduce using rule 70 (declaration)


State 34

   45 init_declarator: declarator '=' . initializer

    STRING_LITERAL  shift, and go to state 45
    IDENTIFIER      shift, and go to state 46
    INT_CONSTANT    shift, and go to state 47
    FLOAT_CONSTANT  shift, and go to state 48
    CHAR_CONSTANT   shift, and go to state 49
    INCREMENT_OP    shift, and go to state 50
    DECREMENT_OP    shift, and go to state 51
    ZERO_CONSTANT   shift, and go to state 52
    '('             shift, and go to state 53
    '&'             shift, and go to state 54
    '+'             shift, and go to state 55
    '-'             shift, and go to state 56
    '*'             shift, and go to state 57
    '{'             shift, and go to state 58

    primary_expression         go to state 59
    equality_expression        go to state 60
    constant                   go to state 61
    unary_operator             go to state 62
    postfix_expression         go to state 63
    cast_expression            go to state 64
    unary_expression           go to state 65
    additive_expression        go to state 66
    relational_expression      go to state 67
    and_expression             go to state 68
    exclusive_or_expression    go to state 69
    inclusive_or_expression    go to state 70
    logical_and_expression     go to state 71
    logical_or_expression      go to state 72
    conditional_expression     go to state 73
    assignment_expression      go to state 74
    initializer                go to state 75
    shift_expression           go to state 76
    multiplicative_expression  go to state 77


State 35

   69 declaration: declaration_specifiers . ';'
   70            | declaration_specifiers . init_declarator_list ';'

    IDENTIFIER  shift, and go to state 18
    '('         shift, and go to state 19
    '*'         shift, and go to state 20
    ';'         shift, and go to state 21

    init_declarator       go to state 22
    init_declarator_list  go to state 23
    declarator            go to state 44
    direct_declarator     go to state 25
    pointer               go to state 26


State 36

  162 declaration_list: declaration .

    $default  reduce using rule 162 (declaration_list)


State 37

  110 function_definition: declaration_specifiers declarator CST . compound_statement

    '{'  shift, and go to state 78

    compound_statement  go to state 79


State 38

  109 function_definition: declaration_specifiers declarator declaration_list . CST compound_statement
  163 declaration_list: declaration_list . declaration

    CHAR      shift, and go to state 1
    SHORT     shift, and go to state 2
    INT       shift, and go to state 3
    LONG      shift, and go to state 4
    SIGNED    shift, and go to state 5
    UNSIGNED  shift, and go to state 6
    FLOAT     shift, and go to state 7
    DOUBLE    shift, and go to state 8
    VOID      shift, and go to state 9
    BOOL      shift, and go to state 10
    MATRIX    shift, and go to state 11

    $default  reduce using rule 95 (CST)

    declaration_specifiers  go to state 35
    declaration             go to state 80
    CST                     go to state 81
    type_specifier          go to state 16


State 39

   90 direct_declarator: direct_declarator '(' . identifier_list ')'
   93                  | direct_declarator '(' . CST ')'
   94                  | direct_declarator '(' . CST parameter_type_list ')'

    IDENTIFIER  shift, and go to state 82

    $default  reduce using rule 95 (CST)

    CST              go to state 83
    identifier_list  go to state 84


State 40

   91 direct_declarator: direct_declarator '[' . assignment_expression ']' '[' assignment_expression ']'
   92                  | direct_declarator '[' . ']' '[' ']'

    STRING_LITERAL  shift, and go to state 45
    IDENTIFIER      shift, and go to state 46
    INT_CONSTANT    shift, and go to state 47
    FLOAT_CONSTANT  shift, and go to state 48
    CHAR_CONSTANT   shift, and go to state 49
    INCREMENT_OP    shift, and go to state 50
    DECREMENT_OP    shift, and go to state 51
    ZERO_CONSTANT   shift, and go to state 52
    '('             shift, and go to state 53
    '&'             shift, and go to state 54
    '+'             shift, and go to state 55
    '-'             shift, and go to state 56
    '*'             shift, and go to state 57
    ']'             shift, and go to state 85

    primary_expression         go to state 59
    equality_expression        go to state 60
    constant                   go to state 61
    unary_operator             go to state 62
    postfix_expression         go to state 63
    cast_expression            go to state 64
    unary_expression           go to state 65
    additive_expression        go to state 66
    relational_expression      go to state 67
    and_expression             go to state 68
    exclusive_or_expression    go to state 69
    inclusive_or_expression    go to state 70
    logical_and_expression     go to state 71
    logical_or_expression      go to state 72
    conditional_expression     go to state 73
    assignment_expression      go to state 86
    shift_expression           go to state 76
    multiplicative_expression  go to state 77


State 41

   73 declarator: pointer direct_declarator .
   90 direct_declarator: direct_declarator . '(' identifier_list ')'
   91                  | direct_declarator . '[' assignment_expression ']' '[' assignment_expression ']'
   92                  | direct_declarator . '[' ']' '[' ']'
   93                  | direct_declarator . '(' CST ')'
   94                  | direct_declarator . '(' CST parameter_type_list ')'

    '('  shift, and go to state 39
    '['  shift, and go to state 40

    $default  reduce using rule 73 (declarator)


State 42

   89 direct_declarator: '(' declarator ')' .

    $default  reduce using rule 89 (direct_declarator)


State 43

   72 init_declarator_list: init_declarator_list ',' init_declarator .

    $default  reduce using rule 72 (init_declarator_list)


State 44

   44 init_declarator: declarator .
   45                | declarator . '=' initializer

    '='  shift, and go to state 34

    $default  reduce using rule 44 (init_declarator)


State 45

    3 primary_expression: STRING_LITERAL .

    $default  reduce using rule 3 (primary_expression)


State 46

    1 primary_expression: IDENTIFIER .

    $default  reduce using rule 1 (primary_expression)


State 47

    8 constant: INT_CONSTANT .

    $default  reduce using rule 8 (constant)


State 48

   10 constant: FLOAT_CONSTANT .

    $default  reduce using rule 10 (constant)


State 49

    9 constant: CHAR_CONSTANT .

    $default  reduce using rule 9 (constant)


State 50

   29 unary_expression: INCREMENT_OP . unary_expression

    STRING_LITERAL  shift, and go to state 45
    IDENTIFIER      shift, and go to state 46
    INT_CONSTANT    shift, and go to state 47
    FLOAT_CONSTANT  shift, and go to state 48
    CHAR_CONSTANT   shift, and go to state 49
    INCREMENT_OP    shift, and go to state 50
    DECREMENT_OP    shift, and go to state 51
    ZERO_CONSTANT   shift, and go to state 52
    '('             shift, and go to state 53
    '&'             shift, and go to state 54
    '+'             shift, and go to state 55
    '-'             shift, and go to state 56
    '*'             shift, and go to state 57

    primary_expression  go to state 59
    constant            go to state 61
    unary_operator      go to state 62
    postfix_expression  go to state 63
    unary_expression    go to state 87


State 51

   31 unary_expression: DECREMENT_OP . unary_expression

    STRING_LITERAL  shift, and go to state 45
    IDENTIFIER      shift, and go to state 46
    INT_CONSTANT    shift, and go to state 47
    FLOAT_CONSTANT  shift, and go to state 48
    CHAR_CONSTANT   shift, and go to state 49
    INCREMENT_OP    shift, and go to state 50
    DECREMENT_OP    shift, and go to state 51
    ZERO_CONSTANT   shift, and go to state 52
    '('             shift, and go to state 53
    '&'             shift, and go to state 54
    '+'             shift, and go to state 55
    '-'             shift, and go to state 56
    '*'             shift, and go to state 57

    primary_expression  go to state 59
    constant            go to state 61
    unary_operator      go to state 62
    postfix_expression  go to state 63
    unary_expression    go to state 88


State 52

   11 constant: ZERO_CONSTANT .

    $default  reduce using rule 11 (constant)


State 53

    2 primary_expression: '(' . expression ')'

    STRING_LITERAL  shift, and go to state 45
    IDENTIFIER      shift, and go to state 46
    INT_CONSTANT    shift, and go to state 47
    FLOAT_CONSTANT  shift, and go to state 48
    CHAR_CONSTANT   shift, and go to state 49
    INCREMENT_OP    shift, and go to state 50
    DECREMENT_OP    shift, and go to state 51
    ZERO_CONSTANT   shift, and go to state 52
    '('             shift, and go to state 53
    '&'             shift, and go to state 54
    '+'             shift, and go to state 55
    '-'             shift, and go to state 56
    '*'             shift, and go to state 57

    primary_expression         go to state 59
    equality_expression        go to state 60
    constant                   go to state 61
    unary_operator             go to state 62
    postfix_expression         go to state 63
    cast_expression            go to state 64
    unary_expression           go to state 65
    additive_expression        go to state 66
    relational_expression      go to state 67
    and_expression             go to state 68
    exclusive_or_expression    go to state 69
    inclusive_or_expression    go to state 70
    logical_and_expression     go to state 71
    logical_or_expression      go to state 72
    conditional_expression     go to state 73
    assignment_expression      go to state 89
    shift_expression           go to state 76
    expression                 go to state 90
    multiplicative_expression  go to state 77


State 54

   14 unary_operator: '&' .

    $default  reduce using rule 14 (unary_operator)


State 55

   15 unary_operator: '+' .

    $default  reduce using rule 15 (unary_operator)


State 56

   16 unary_operator: '-' .

    $default  reduce using rule 16 (unary_operator)


State 57

   17 unary_operator: '*' .

    $default  reduce using rule 17 (unary_operator)


State 58

   61 initializer: '{' . initializer_list '}'
   62            | '{' . initializer_list ',' '}'

    STRING_LITERAL  shift, and go to state 45
    IDENTIFIER      shift, and go to state 46
    INT_CONSTANT    shift, and go to state 47
    FLOAT_CONSTANT  shift, and go to state 48
    CHAR_CONSTANT   shift, and go to state 49
    INCREMENT_OP    shift, and go to state 50
    DECREMENT_OP    shift, and go to state 51
    ZERO_CONSTANT   shift, and go to state 52
    '('             shift, and go to state 53
    '&'             shift, and go to state 54
    '+'             shift, and go to state 55
    '-'             shift, and go to state 56
    '*'             shift, and go to state 57
    '.'             shift, and go to state 91
    '['             shift, and go to state 92
    '{'             shift, and go to state 58

    primary_expression         go to state 59
    equality_expression        go to state 60
    constant                   go to state 61
    unary_operator             go to state 62
    postfix_expression         go to state 63
    cast_expression            go to state 64
    unary_expression           go to state 65
    additive_expression        go to state 66
    relational_expression      go to state 67
    and_expression             go to state 68
    exclusive_or_expression    go to state 69
    inclusive_or_expression    go to state 70
    logical_and_expression     go to state 71
    logical_or_expression      go to state 72
    conditional_expression     go to state 73
    assignment_expression      go to state 74
    initializer                go to state 93
    shift_expression           go to state 76
    initializer_list           go to state 94
    designator_list            go to state 95
    designator                 go to state 96
    multiplicative_expression  go to state 77
    designation                go to state 97


State 59

   18 postfix_expression: primary_expression .
   25                   | primary_expression . '[' expression ']' '[' expression ']'

    '['  shift, and go to state 98

    $default  reduce using rule 18 (postfix_expression)


State 60

    5 equality_expression: equality_expression . NE_OP relational_expression
    7                    | equality_expression . EQ_OP relational_expression
   41 and_expression: equality_expression .

    EQ_OP  shift, and go to state 99
    NE_OP  shift, and go to state 100

    $default  reduce using rule 41 (and_expression)


State 61

    4 primary_expression: constant .

    $default  reduce using rule 4 (primary_expression)


State 62

   30 unary_expression: unary_operator . cast_expression

    STRING_LITERAL  shift, and go to state 45
    IDENTIFIER      shift, and go to state 46
    INT_CONSTANT    shift, and go to state 47
    FLOAT_CONSTANT  shift, and go to state 48
    CHAR_CONSTANT   shift, and go to state 49
    INCREMENT_OP    shift, and go to state 50
    DECREMENT_OP    shift, and go to state 51
    ZERO_CONSTANT   shift, and go to state 52
    '('             shift, and go to state 53
    '&'             shift, and go to state 54
    '+'             shift, and go to state 55
    '-'             shift, and go to state 56
    '*'             shift, and go to state 57

    primary_expression  go to state 59
    constant            go to state 61
    unary_operator      go to state 62
    postfix_expression  go to state 63
    cast_expression     go to state 101
    unary_expression    go to state 102


State 63

   19 postfix_expression: postfix_expression . '(' ')'
   20                   | postfix_expression . '.' IDENTIFIER
   21                   | postfix_expression . '(' argument_expression_list ')'
   22                   | postfix_expression . POINTER_OP IDENTIFIER
   23                   | postfix_expression . INCREMENT_OP
   24                   | postfix_expression . DECREMENT_OP
   26                   | postfix_expression . POINTCOL
   28 unary_expression: postfix_expression .

    POINTER_OP    shift, and go to state 103
    INCREMENT_OP  shift, and go to state 104
    DECREMENT_OP  shift, and go to state 105
    POINTCOL      shift, and go to state 106
    '('           shift, and go to state 107
    '.'           shift, and go to state 108

    $default  reduce using rule 28 (unary_expression)


State 64

  122 multiplicative_expression: cast_expression .

    $default  reduce using rule 122 (multiplicative_expression)


State 65

   27 cast_expression: unary_expression .
   58 assignment_expression: unary_expression . assignment_operator assignment_expression

    PLUS_ASSIGN      shift, and go to state 109
    MINUS_ASSIGN     shift, and go to state 110
    RIGHT_ASSIGN     shift, and go to state 111
    LEFT_ASSIGN      shift, and go to state 112
    MULTIPLY_ASSIGN  shift, and go to state 113
    MODULUS_ASSIGN   shift, and go to state 114
    AND_ASSIGN       shift, and go to state 115
    DIVIDE_ASSIGN    shift, and go to state 116
    XOR_ASSIGN       shift, and go to state 117
    OR_ASSIGN        shift, and go to state 118
    '='              shift, and go to state 119

    $default  reduce using rule 27 (cast_expression)

    assignment_operator  go to state 120


State 66

   33 additive_expression: additive_expression . '+' multiplicative_expression
   34                    | additive_expression . '-' multiplicative_expression
   63 shift_expression: additive_expression .

    '+'  shift, and go to state 121
    '-'  shift, and go to state 122

    $default  reduce using rule 63 (shift_expression)


State 67

    6 equality_expression: relational_expression .
   36 relational_expression: relational_expression . '<' shift_expression
   37                      | relational_expression . GE_OP shift_expression
   38                      | relational_expression . '>' shift_expression
   39                      | relational_expression . LE_OP shift_expression
